# Text-classification

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
code/utils/: train_llama.py
configs/: conf_llama_v0.yaml
deploy/: api.py
docker/: Dockerfile.tensorflow  Dockerfile.torch  Dockerfile.vllm
notebooks/: vllm_inference.ipynb
